--- a/notas.Rmd
+++ b/notas.Rmd
@@ -13,7 +13,7 @@ source("setup_knitr.R")
 ```
 
 ```{r pacotes, include=TRUE}
-#file = "/home/wagner/Dropbox/Cursos/EstatísticaBásica/BiologiaMANHA/Prova1NOTA.csv"
-#prova1 <- read.csv(file, header = TRUE)
-#kable(prova1, align = c("l","c","c","c","c","c","c","c","c","c","c","c","l"), digits = 2)
+file = "/home/wagner/Dropbox/Cursos/Inferencia/2018/Prova1.csv"
+prova1 <- read.csv(file, header = TRUE)
+kable(prova1, align = c("l","c"), digits = 2)
 ```
